# Homework

./: .gitignore  CMakeLists.txt  README.md  反正都是作业，先写这吧.md
Five_Chess/: Five_Chess.sln  README.md
Five_Chess/Five_Chess/: Five_Chess.vcxproj  Five_Chess.vcxproj.filters  resource_setting.aps  resource_setting.rc
Five_Chess/Project/settings/: settings.txt
Five_Chess/Project/source code/: Common.h  Game Logic.cpp  Game Logic.h  Graphics Logic.cpp  Graphics Logic.h  Player_base.h  Search_AI.cpp  Search_AI.h  main.cpp
Five_Chess/实验报告/: 五子棋AI实验报告.doc
level1/: CMakeLists.txt
level1/p01_running_letter/: main.c
level1/p04_goldbach/: main.c
level1/p05_encrypt_decrypt/: main.c
level1/p08_push_boxes/: p08_push_boxes.sln
level1/p10_warehouse/: main.cpp
level2/: CMakeLists.txt
level2/GA/: dfs.cpp
level2/PI/: HPD.hpp  PI-main.cpp  README.md  pi.out  挨打.cpp
level2/SkipList/: README.md  SkipList.cpp  源.cpp
实验报告/: 五子棋AI实验报告.doc
课程设计/: README.md  五子棋AI实验报告.doc
