project(level1)

add_executable(p01_running_letter p01_running_letter/main.c)

add_executable(p02_is_prime p02_is_prime/main.c)

add_executable(p03_all_primes p03_all_primes/main.c)

add_executable(p04_goldbach p04_goldbach/main.c)

add_executable(p05_encrypt_decrypt p05_encrypt_decrypt/main.c)

add_executable(p06_hanoi p06_hanoi/main.c)

add_executable(p07_maze p07_maze/main.c)

# p08我单独创建一个sln文件以运行

add_executable(p09_linked_list p09_linked_list/main.c)

add_executable(p10_warehouse p10_warehouse/main.cpp)

add_executable(Ex1_Queue Ex1_Nodes/queue.c)

add_executable(Ex1_Stack Ex1_Nodes/stack.c)

add_executable(Ex2_Calculator Ex2_Calculator/calculator.cpp)
